# app-icon-sizes

./: .gitignore  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  sessionlog.md  size.json
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CustomSizeManager.tsx  ExportFooter.tsx  ImageSetConfig.tsx  ModeSelector.tsx  PlatformSelector.tsx  PreviewGrid.tsx  SourceImageUploader.tsx  index.ts
src/core/: exporter.ts  index.ts  presets.ts  resize.ts  sizeConfig.ts
src/i18n/: I18nContext.tsx  LanguageSwitcher.tsx  index.ts  translations.ts
src/types/: index.ts  pica.d.ts
src/utils/: icoEncoder.ts
